<resources>
    <string name="app_name">HerbaMed Jabar</string>
    <string name="scan_tanaman">Scan Tanaman</string>
    <string name="gambar_tanaman_yang_diambil">Gambar tanaman yang diambil</string>
    <string name="nama_tanaman_akan_muncul_di_sini">Nama tanaman akan muncul di sini…</string>
    <string name="tanaman_herbal">Tanaman Herbal:</string>
    <string name="kegunaan">Kegunaan:</string>
    <string name="deskripsi_dan_kegunaan_tanaman_akan_muncul_di_sini">Deskripsi dan kegunaan tanaman akan muncul di sini…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selamat_datang">Selamat Datang!</string>
    <string name="selamat_datang_desc">Temukan tanaman herbal di sekitar Anda</string>
    <string name="default_web_client_id">374536660454-kicnn7hcuiu5pqehgsguom11krstg4e5.apps.googleusercontent.com</string>
</resources>